--- a/plant_tracker/src/main/res/layout/dialog_general_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_general_event.xml
@@ -2,11 +2,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <RelativeLayout
         android:layout_width="259dp"
-        android:layout_height="415dp">
+        android:layout_height="415dp"
+        android:layout_weight="0.51">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/relativeLayout7"
+            android:layout_above="@+id/relativeLayout11">
+
+            <CheckBox
+                android:id="@+id/applyToGroupCheckbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/feedStrengthEditText"
+                android:layout_below="@+id/feedStrengthEditText"
+                android:text="Apply to group" />
+
+            <Spinner
+                android:id="@+id/groupListSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/applyToGroupCheckbox"
+                android:layout_alignTop="@+id/applyToGroupCheckbox"
+                android:layout_toEndOf="@+id/applyToGroupCheckbox" />
+        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/relativeLayout6"
@@ -74,7 +99,6 @@
             android:id="@+id/relativeLayout7"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/relativeLayout5">
@@ -107,7 +131,8 @@
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:id="@+id/relativeLayout11">
 
             <Button
                 android:id="@+id/cancelButton"
