--- a/plant_tracker/src/main/res/menu/activity_plant_tracker_ui_drawer.xml
+++ b/plant_tracker/src/main/res/menu/activity_plant_tracker_ui_drawer.xml
@@ -1,42 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/menuBar">
 
-    <group
-        android:id="@+id/viewMenuGroup"
-        android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_active_plants"
-            android:icon="@drawable/ic_growing_plant"
-            android:title="Plants: Active" />
-        <item
-            android:id="@+id/nav_archived_plants"
-            android:icon="@drawable/ic_growing_plant"
-            android:title="Plants: Archived" />
-        <item
-            android:id="@+id/nav_all_plants"
-            android:icon="@drawable/ic_growing_plant"
-            android:title="Plants: All" />
-        <item
-            android:id="@+id/nav_add_plant"
-            android:checkable="false"
-            android:icon="@drawable/ic_add"
-            android:title="Add Plant" />
-        <item
-            android:id="@+id/nav_about_plant_tracker"
-            android:icon="@drawable/ic_about"
-            android:title="About Plant Tracker" />
-    </group>
+    <item android:title="Views" android:id="@+id/viewsMenuItem">
+        <menu>
+            <item
+                android:id="@+id/nav_about_plant_tracker"
+                android:icon="@drawable/ic_about"
+                android:title="About Plant Tracker" />
+            <item
+                android:id="@+id/nav_add_plant"
+                android:checkable="false"
+                android:icon="@drawable/ic_add"
+                android:title="Add Plant" />
+            <item
+                android:id="@+id/nav_active_plants"
+                android:icon="@drawable/ic_growing_plant"
+                android:title="Plants: Active"
+                android:orderInCategory="500" />
+            <item
+                android:id="@+id/nav_archived_plants"
+                android:icon="@drawable/ic_growing_plant"
+                android:title="Plants: Archived"
+                android:orderInCategory="500" />
+            <item
+                android:id="@+id/nav_all_plants"
+                android:icon="@drawable/ic_growing_plant"
+                android:title="Plants: All"
+                android:orderInCategory="500" />
+        </menu>
+    </item>
 
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_export"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Export" />
+            <item
+                android:id="@+id/nav_import"
+                android:icon="@drawable/ic_menu_send"
+                android:title="Import" />
         </menu>
     </item>
 
