--- a/plant_tracker/src/main/res/layout/dialog_feed_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_feed_event.xml
@@ -3,16 +3,18 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="265dp"
-        android:layout_height="300dp">
+        android:layout_width="fill_parent"
+        android:layout_height="300dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true">
 
         <CheckBox
             android:id="@+id/applyToGroupCheckbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Apply to group"
+            android:layout_alignStart="@+id/feedStrengthEditText"
             android:layout_below="@+id/feedStrengthEditText"
-            android:layout_alignStart="@+id/feedStrengthEditText" />
+            android:text="Apply to group" />
 
         <Spinner
             android:id="@+id/groupListSpinner"
@@ -26,10 +28,11 @@
             android:id="@+id/feedOkButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/textView3"
-            android:layout_alignRight="@+id/textView3"
-            android:layout_alignTop="@+id/feedCancelButton"
-            android:text="Ok" />
+            android:text="Ok"
+            android:layout_alignBaseline="@+id/feedCancelButton"
+            android:layout_alignBottom="@+id/feedCancelButton"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="19dp" />
 
         <Button
             android:id="@+id/feedCancelButton"
