--- a/plant_tracker/src/main/res/layout/dialog_water_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_water_event.xml
@@ -6,9 +6,8 @@
     android:weightSum="1">
 
     <RelativeLayout
-        android:layout_width="260dp"
-        android:layout_height="207dp"
-        android:layout_weight="0.54">
+        android:layout_width="match_parent"
+        android:layout_height="207dp">
 
         <TextView
             android:id="@+id/textView2"
