New stuff... Added reworked individual plant display (individual_plant_2) Added the ability to delete a recordable event via long press Minor resizing changes for dialogs

--- a/plant_tracker/src/main/res/layout/activity_plant_tracker_ui.xml
+++ b/plant_tracker/src/main/res/layout/activity_plant_tracker_ui.xml
@@ -50,7 +50,7 @@
 
             <include
                 android:id="@+id/individualPlantViewLayout"
-                layout="@layout/individual_plant"
+                layout="@layout/individual_plant_2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></include>
 
