--- a/plant_tracker/src/main/res/layout/dialog_general_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_general_event.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="415dp"
-        android:layout_weight="0.51">
+        android:layout_weight="0.80">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -20,17 +20,17 @@
                 android:id="@+id/applyToGroupCheckbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/feedStrengthEditText"
-                android:layout_below="@+id/feedStrengthEditText"
-                android:text="Apply to group" />
+                android:text="Apply to group"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="18dp" />
 
             <Spinner
                 android:id="@+id/groupListSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/applyToGroupCheckbox"
-                android:layout_alignTop="@+id/applyToGroupCheckbox"
-                android:layout_toEndOf="@+id/applyToGroupCheckbox" />
+                android:layout_below="@+id/applyToGroupCheckbox"
+                android:layout_alignStart="@+id/applyToGroupCheckbox" />
         </RelativeLayout>
 
         <RelativeLayout
