--- a/plant_tracker/src/main/res/layout/dialog_general_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_general_event.xml
@@ -1,162 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="415dp"
-        android:layout_weight="0.80">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/relativeLayout11"
-            android:layout_below="@+id/relativeLayout7">
+        <TextView
+            android:id="@+id/textView31"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Abbreviation for event"
+            android:textSize="18sp" />
 
-            <CheckBox
-                android:id="@+id/applyToGroupCheckbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Apply to group"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="18dp" />
+        <AutoCompleteTextView
+            android:id="@+id/generalEventAbbrevTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
-            <Spinner
-                android:id="@+id/groupListSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/applyToGroupCheckbox"
-                android:layout_alignStart="@+id/applyToGroupCheckbox" />
-        </RelativeLayout>
+    </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/relativeLayout6"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-            <AutoCompleteTextView
-                android:id="@+id/generalEventAbbrevTextView"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/textView20"
-                android:layout_alignStart="@+id/textView20"
-                android:layout_below="@+id/textView20"
-                android:inputType="textAutoComplete"
-                android:maxLength="4"
-                android:maxLines="1" />
+        <TextView
+            android:id="@+id/textView33"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name for event"
+            android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/textView20"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="18dp"
-                android:text="Abbreviation for event" />
-        </RelativeLayout>
+        <AutoCompleteTextView
+            android:id="@+id/generalEventNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4.71" />
 
-        <RelativeLayout
-            android:id="@+id/relativeLayout5"
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView35"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Notes"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/eventNotesEditText"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/relativeLayout6">
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="textCapSentences|textAutoCorrect|textMultiLine" />
 
-            <TextView
-                android:id="@+id/textView18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="18dp"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="14dp"
-                android:text="Name for event" />
+    </LinearLayout>
 
-            <AutoCompleteTextView
-                android:id="@+id/generalEventNameTextView"
-                android:layout_width="220dp"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/textView18"
-                android:layout_alignStart="@+id/textView18"
-                android:layout_centerVertical="true" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout7"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/relativeLayout5">
-
-            <EditText
-                android:id="@+id/eventNotesEditText"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:layout_alignLeft="@+id/textView21"
-                android:layout_alignStart="@+id/textView21"
-                android:layout_below="@+id/textView21"
-                android:ems="10"
-                android:inputType="textMultiLine" />
-
-            <TextView
-                android:id="@+id/textView21"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="19dp"
-                android:layout_marginStart="19dp"
-                android:layout_marginTop="14dp"
-                android:text="Information about the event" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout11"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
-
-            <Button
-                android:id="@+id/cancelButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:text="Cancel" />
-
-            <Button
-                android:id="@+id/okButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginEnd="19dp"
-                android:layout_marginRight="19dp"
-                android:text="Ok" />
-
-        </RelativeLayout>
-
-    </RelativeLayout>
 </LinearLayout>
