--- a/plant_tracker/src/main/res/layout/dialog_observation_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_observation_event.xml
@@ -4,130 +4,113 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="476dp"
-        android:layout_weight="0.61">
-
-        <CheckBox
-            android:id="@+id/applyToGroupCheckbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/tempMaxEditText"
-            android:layout_below="@+id/observationNotesEditText"
-            android:text="Apply to group" />
-
-        <Spinner
-            android:id="@+id/groupListSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/cancelButton"
-            android:layout_alignEnd="@+id/okButton"
-            android:layout_below="@+id/applyToGroupCheckbox" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textView20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="29dp"
-            android:layout_marginStart="29dp"
-            android:layout_marginTop="17dp"
-            android:text="RH Range for the day, min/max" />
+            android:paddingLeft="5dp"
+            android:text="Min RH" />
 
         <EditText
             android:id="@+id/rhMinEditText"
-            android:layout_width="50dp"
+            android:layout_width="114dp"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/textView7"
             android:layout_alignStart="@+id/textView7"
             android:layout_below="@+id/textView7"
             android:ems="10"
-            android:inputType="number" />
+            android:inputType="number"
+            android:layout_weight="0.03" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <TextView
+            android:id="@+id/textView37"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:text="Max RH" />
 
         <EditText
             android:id="@+id/rhMaxEditText"
-            android:layout_width="50dp"
+            android:layout_width="109dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView7"
-            android:layout_marginLeft="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_toEndOf="@+id/rhMinEditText"
-            android:layout_toRightOf="@+id/rhMinEditText"
+            android:layout_weight="0.04"
             android:ems="10"
-            android:inputType="number" />
+            android:inputType="textPersonName" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textView39"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/rhMinEditText"
-            android:layout_alignStart="@+id/rhMinEditText"
-            android:layout_below="@+id/rhMinEditText"
-            android:layout_marginTop="23dp"
-            android:text="Temperature range for the day, min/max" />
+            android:paddingLeft="5dp"
+            android:text="Min Temp" />
 
         <EditText
             android:id="@+id/tempMinEditText"
-            android:layout_width="50dp"
+            android:layout_width="103dp"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView8"
-            android:layout_alignStart="@+id/textView8"
-            android:layout_below="@+id/textView8"
             android:ems="10"
-            android:inputType="number" />
+            android:inputType="textPersonName" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView41"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:text="Max Temp" />
 
         <EditText
             android:id="@+id/tempMaxEditText"
-            android:layout_width="50dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/rhMaxEditText"
-            android:layout_alignStart="@+id/rhMaxEditText"
-            android:layout_below="@+id/textView8"
             android:ems="10"
-            android:inputType="number" />
+            android:inputType="textPersonName" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView43"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/tempMinEditText"
-            android:layout_alignStart="@+id/tempMinEditText"
-            android:layout_below="@+id/tempMinEditText"
-            android:layout_marginTop="22dp"
-            android:text="Observation notes" />
+            android:paddingLeft="5dp"
+            android:text="Observations" />
 
         <EditText
             android:id="@+id/observationNotesEditText"
-            android:layout_width="wrap_content"
-            android:layout_height="150dp"
-            android:layout_alignLeft="@+id/textView9"
-            android:layout_alignStart="@+id/textView9"
-            android:layout_below="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
             android:ems="10"
-            android:inputType="textMultiLine"
-            android:layout_alignEnd="@+id/okButton" />
+            android:inputType="textCapSentences|textAutoCorrect|textMultiLine" />
+    </LinearLayout>
 
-        <Button
-            android:id="@+id/cancelButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/observationNotesEditText"
-            android:layout_marginBottom="15dp"
-            android:text="Cancel" />
-
-        <Button
-            android:id="@+id/okButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ok"
-            android:layout_alignBaseline="@+id/cancelButton"
-            android:layout_alignBottom="@+id/cancelButton"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="27dp" />
-
-    </RelativeLayout>
 </LinearLayout>
