--- a/plant_tracker/src/main/res/layout/dialog_water_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_water_event.xml
@@ -1,73 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:weightSum="1">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/textView18"
         android:layout_width="match_parent"
-        android:layout_height="244dp">
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
+        android:text="pH of water used" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="21dp"
-            android:layout_marginStart="21dp"
-            android:layout_marginTop="16dp"
-            android:layout_weight="1"
-            android:text="pH of water used for this watering"
-            android:textAlignment="center" />
-
-        <EditText
-            android:id="@+id/pHEditText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView2"
-            android:layout_alignStart="@+id/textView2"
-            android:layout_below="@+id/textView2"
-            android:layout_marginTop="15dp"
-            android:ems="10"
-            android:inputType="numberDecimal" />
-
-        <Button
-            android:id="@+id/cancelButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/applyToGroupCheckbox"
-            android:layout_marginBottom="13dp" />
-
-        <Button
-            android:id="@+id/okButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="17dp"
-            android:text="Ok"
-            android:layout_alignBaseline="@+id/cancelButton"
-            android:layout_alignBottom="@+id/cancelButton"
-            android:layout_alignParentEnd="true" />
-
-        <CheckBox
-            android:id="@+id/applyToGroupCheckbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/pHEditText"
-            android:layout_centerVertical="true"
-            android:text="Apply to group" />
-
-        <Spinner
-            android:id="@+id/groupListSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/applyToGroupCheckbox"
-            android:layout_below="@+id/applyToGroupCheckbox"
-            android:layout_alignEnd="@+id/okButton" />
-    </RelativeLayout>
+    <EditText
+        android:id="@+id/pHEditText"
+        android:layout_width="111dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignStart="@+id/textView2"
+        android:layout_below="@+id/textView2"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:inputType="numberDecimal" />
 
 </LinearLayout>
