Additional interface cleanup. Implemented state changes. Implemented recordable event sorting in preparation for making recordable events editable. Implemented the time/date change tabs. Fixed the individual plant view to show the newly calculated state day/week values. Fixed some bugs.

--- a/plant_tracker/src/main/res/layout/dialog_display_recordable_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_display_recordable_event.xml
@@ -1,102 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="302dp"
-        android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <RelativeLayout
-            android:id="@+id/eventDetailLayout"
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
+        <TextView
+            android:id="@+id/observEventTypeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:text="Water"
+            android:textSize="18sp" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/observEventTypeTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="18dp"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="13dp"
-                android:text="Water" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/dateTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/observEventTypeTextView"
-                android:layout_alignStart="@+id/observEventTypeTextView"
-                android:layout_below="@+id/observEventTypeTextView"
-                android:layout_marginTop="11dp"
-                android:text="Sun Jun 01 2017 01:01:01 PM EDT" />
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/dateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/observEventTypeTextView"
+            android:layout_alignStart="@+id/observEventTypeTextView"
+            android:layout_below="@+id/observEventTypeTextView"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:text="Sun Jun 01 2017 01:01:01 PM EDT"
+            android:textSize="18sp" />
+    </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/waterLayout"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
+    <LinearLayout
+        android:id="@+id/waterLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView25"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/eventDetailLayout">
+            android:layout_alignParentTop="true"
+            android:gravity="center_vertical|center_horizontal"
+            android:padding="5dp"
+            android:text="pH"
+            android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/foodStrengthTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/textView27"
-                android:layout_alignLeft="@+id/textView27"
-                android:layout_alignRight="@+id/textView27"
-                android:layout_alignStart="@+id/textView27"
-                android:layout_below="@+id/textView27"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="45/55" />
+        <TextView
+            android:id="@+id/pHTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/textView25"
+            android:layout_alignLeft="@+id/textView25"
+            android:layout_alignRight="@+id/textView25"
+            android:layout_alignStart="@+id/textView25"
+            android:layout_below="@+id/textView25"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="65/85"
+            android:textSize="18sp" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView27"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView25"
-                android:layout_alignBottom="@+id/textView25"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="Food Strength" />
+    <LinearLayout
+        android:id="@+id/foodLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1">
 
-            <TextView
-                android:id="@+id/pHTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/textView25"
-                android:layout_alignLeft="@+id/textView25"
-                android:layout_alignRight="@+id/textView25"
-                android:layout_alignStart="@+id/textView25"
-                android:layout_below="@+id/textView25"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="65/85" />
+        <TextView
+            android:id="@+id/textView27"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView25"
+            android:layout_alignBottom="@+id/textView25"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:gravity="center_vertical|center_horizontal"
+            android:padding="5dp"
+            android:text="Food Strength"
+            android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/textView25"
-                android:layout_width="75dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="pH" />
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/foodStrengthTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/textView27"
+            android:layout_alignLeft="@+id/textView27"
+            android:layout_alignRight="@+id/textView27"
+            android:layout_alignStart="@+id/textView27"
+            android:layout_below="@+id/textView27"
+            android:layout_weight="0.08"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="45/55"
+            android:textSize="18sp" />
+    </LinearLayout>
 
-    </RelativeLayout>
 </LinearLayout>
