--- a/plant_tracker/src/main/res/layout/dialog_display_observation.xml
+++ b/plant_tracker/src/main/res/layout/dialog_display_observation.xml
@@ -1,129 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="5dp">
 
-    <RelativeLayout
-        android:layout_width="302dp"
-        android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <RelativeLayout
-            android:id="@+id/eventDetailLayout"
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
+        <TextView
+            android:id="@+id/observEventTypeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:text="Observation event type"
+            android:textSize="18sp"/>
 
-            <TextView
-                android:id="@+id/observEventTypeTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="18dp"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="13dp"
-                android:text="Water" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/observDateTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/observEventTypeTextView"
-                android:layout_alignStart="@+id/observEventTypeTextView"
-                android:layout_below="@+id/observEventTypeTextView"
-                android:layout_marginTop="11dp"
-                android:text="Sun Jun 01 2017 01:01:01 PM EDT" />
-        </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <RelativeLayout
-            android:id="@+id/waterLayout"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
+        <TextView
+            android:id="@+id/observDateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/observEventTypeTextView"
+            android:layout_alignStart="@+id/observEventTypeTextView"
+            android:layout_below="@+id/observEventTypeTextView"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:text="Sun Jun 01 2017 01:01:01 PM EDT"
+            android:textSize="18sp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView27"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView25"
+            android:layout_alignBottom="@+id/textView25"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:padding="5dp"
+            android:text="Relative Humidity"
+            android:textSize="18sp"/>
+
+        <TextView
+            android:id="@+id/rhTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/textView27"
+            android:layout_alignLeft="@+id/textView27"
+            android:layout_alignRight="@+id/textView27"
+            android:layout_alignStart="@+id/textView27"
+            android:layout_below="@+id/textView27"
+            android:gravity="center_vertical|center_horizontal"
+            android:paddingLeft="5dp"
+            android:text="45/55"
+            android:textSize="18sp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView25"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/eventDetailLayout">
+            android:layout_alignParentTop="true"
+            android:padding="5dp"
+            android:text="Temperature"
+            android:textSize="18sp"/>
 
-            <TextView
-                android:id="@+id/rhTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/textView27"
-                android:layout_alignLeft="@+id/textView27"
-                android:layout_alignRight="@+id/textView27"
-                android:layout_alignStart="@+id/textView27"
-                android:layout_below="@+id/textView27"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="45/55" />
+        <TextView
+            android:id="@+id/tempTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/textView25"
+            android:layout_alignLeft="@+id/textView25"
+            android:layout_alignRight="@+id/textView25"
+            android:layout_alignStart="@+id/textView25"
+            android:layout_below="@+id/textView25"
+            android:gravity="center_vertical|center_horizontal"
+            android:paddingLeft="5dp"
+            android:text="65/85"
+            android:textSize="18sp"/>
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView27"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView25"
-                android:layout_alignBottom="@+id/textView25"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
-                android:text="Relative Humidity" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tempTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/textView25"
-                android:layout_alignLeft="@+id/textView25"
-                android:layout_alignRight="@+id/textView25"
-                android:layout_alignStart="@+id/textView25"
-                android:layout_below="@+id/textView25"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="65/85" />
-
-            <TextView
-                android:id="@+id/textView25"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
-                android:text="Temperature" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/notesLayout"
+        <TextView
+            android:id="@+id/textView29"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/waterLayout">
+            android:layout_alignParentTop="true"
+            android:padding="5dp"
+            android:text="Notes"
+            android:textSize="18sp"/>
 
-            <TextView
-                android:id="@+id/notesTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/textView29"
-                android:layout_alignStart="@+id/textView29"
-                android:layout_below="@+id/textView29"
-                android:text="TextView" />
+        <TextView
+            android:id="@+id/notesTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView29"
+            android:layout_alignStart="@+id/textView29"
+            android:layout_below="@+id/textView29"
+            android:padding="5dp"
+            android:text="TextView"
+            android:textSize="18sp"/>
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView29"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="13dp"
-                android:text="Notes" />
-        </RelativeLayout>
-    </RelativeLayout>
 </LinearLayout>
